[package]
name = "p2p-node-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
data-encoding = "2.3.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }

